Connect application to mysql db
Created user and toDoItem dbContext
Add db re-creation on every application start

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -9,5 +9,8 @@
   "Authentication": {
     "Secret": "bla-bla-bla-foo-bar"
   },
+  "ConnectionStrings": {
+    "ToDoItems": "Server=localhost; Database=ToDoItems; Uid=test; Pwd=12345"
+  },
   "AllowedHosts": "*"
 }
