--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -7,9 +7,11 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Common\Common.csproj" />
 		<ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
+		<ProjectReference Include="..\Logger\Logger.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
